# ThermoPot

./: .gitignore  404.html  Ba3Zr2S7_P4_2_mnm.in  CODE_OF_CONDUCT.md  DG_CZTS_S2.py  DG_CZTS_S8.py  DG_CZTS_SnS2.py  DG_CZTS_SnS_Scragg.py  DG_CZTS_alpha.py  DG_binaries_CZTS_S2.py  DH_CZTS_S8.py  DH_CZTS_aS.py  DH_CZTS_aS_singleT.py  MANIFEST.in  README.md  ZrS_Fm-3m.in  aims.py  citation.cff  cv_compare.py  formation_table.tex  index.html  index.md  interpolate_phonopy.py  interpolate_thermal_property.py  jscragg_2011.csv  materials.py  mkdocs.yml  my_potentials.py  objects.inv  paper_analysis.ipynb  paper_analysis_hse06.ipynb  paper_analysis_pbesol.ipynb  plot_potentials.py  report_H_standard.py  setup.cfg  sitemap.xml  sulfur_model_comparison.ipynb
.github/: mkdocs.yml
.ipynb_checkpoints/: paper_analysis-checkpoint.ipynb  sulfur_model_comparison-checkpoint.ipynb
BaZrS3/: BaZrS3.ipynb  BaZrS3_hse06.ipynb  BaZrS3_pbesol.ipynb  BaZrS3_scan.ipynb  data.txt  plot_GFE_component.ipynb
api/: api.md  index.html
background/: background.md  index.html
contributing/: contributing.md  index.html
docs/: api.md  contributing.md  index.md  tutorial.ipynb
installation/: index.html  installation.md
plots/: DG_CZTS_S2.py  DG_CZTS_S8.py  DG_CZTS_SnS.py  DG_CZTS_SnS2.py  DG_CZTS_SnS_Scragg.py  DG_CZTS_alpha.py  DG_CZTS_binaries.py  DG_stannite.py  DG_ternary.py  plot_potentials.py
sanity_checks/: U_compare.py  cv_compare.py  cv_mu_fig.py  mu_compare.py
scripts/: conversions.py
search/: search_index.json
structures/: Ba2ZrS4_I4_mmm.in  Ba3Zr2S7_I4_mmm.in  BaS2_C2_c.in  BaS_Fm-3m.in  BaZrS3_Pnma.in  ZrS2_P-3m1.in  ZrS_P4_nmm.in
sulfur/: mu_pbe0_scaled.csv  mu_pbe0_scaled_S8ref.csv  mu_pbe0_scaled_s2ref.csv
tests/: conftest.py  test_calculations.py
thermopot/: __init__.py  calculations.py  inter.py  interpolate.py  materials.py  plots.py  potential.py  (+6 more)
thermopot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+482 files in other folders)
