[metadata]
name = thermopot
author = NU-CEM
author_email = l.whalley@northumbria.ac.uk
description = Software for ab-initio thermodynamic modelling of material formation and decomposition.
long_description = file: README.md
long_description_content_type = text/markdown
version = attr: thermopot.__version__
url = https://github.com/NU-CEM/ThermoPot
project_urls =
    Bug Tracker = https://github.com/NU-CEM/ThermoPot/issues
keywords =
  materials science
  physics
  chemistry
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Operating System :: OS Independent
license_files =
  LICENSE.md

[options]
python_requires >= 3.0.0
packages = thermopot
install_requires =
    matplotlib
    numpy
    scipy
    phonopy

[options.extras_require]
tests =
  pytest
dev = 
  black
